Overlap fix

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -9,8 +9,8 @@
 
   &__content {
     height: 100vh;
-
-    @include paddingInline;
+    max-width: 1600px;
+    min-height: 400px;
 
     display: grid;
     column-gap: 20px;
@@ -18,6 +18,8 @@
     --rows: 5;
     grid-template-columns: repeat(var(--columns), 1fr);
     grid-template-rows: max-content max-content max-content max-content 1fr;
+
+    @include paddingInline;
 
     @include onTablette {
       --columns: 6;
@@ -45,18 +47,13 @@
 
   &__button {
     margin-bottom: 48px;
-    grid-column: span 2;
 
     @include onTablette {
-      grid-column: 1 / 4;
+      width: 50%;
     }
 
     @include onDesktop {
-      grid-column: 1 / 5;
-    }
-
-    @include onDisignDesktop {
-      grid-column: 1 / 4;
+      width: 65%;
     }
   }
 
@@ -68,16 +65,9 @@
     padding: 0;
     margin: 0 0 32px;
 
-    grid-column: span 2;
-
     @include onTablette {
-      grid-column: span 4;
       font-size: 64px;
       line-height: 68px;
-    }
-
-    @include onDesktop {
-      margin-top: 240px;
     }
   }
 
@@ -98,8 +88,25 @@
     }
   }
 
+  &__title-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    grid-column: span 2;
+
+    @include onTablette {
+      grid-column: span 6;
+    }
+
+    @include onDesktop {
+      grid-column: 1 / 5;
+      grid-row: 2 / 6;
+    }
+
+  }
+
   &__slider {
-    background-position: top;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
     border-bottom-right-radius: 30px;
@@ -107,11 +114,13 @@
     display: flex;
     flex-direction: column;
     justify-content: end;
+    z-index: 2;
 
     grid-column: span 2;
+    grid-row: 4 / 6;
 
     @include onTablette {
-      grid-column: 1 / 7;
+      grid-column: span 6;
     }
 
     @include onDesktop {
@@ -120,16 +129,16 @@
 
       border-top-right-radius: 0;
       border-bottom-left-radius: 0;
+      padding-left: 78px;
     }
 
     @include onDisignDesktop {
-      grid-column: 8 / 13;
+      padding-left: 48px;
     }
   }
 
   &__slider-background {
     position: absolute;
-    overflow-y: hidden;
     background-image: url(../images/slider/photo.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -138,6 +147,7 @@
     bottom: 0;
     width: 100%;
     height: 41vh;
+    min-height: 300px;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
     border-bottom-right-radius: 30px;
@@ -147,13 +157,11 @@
       border-top-right-radius: 0;
       border-bottom-left-radius: 0;
       width: 50%;
-      height: 91vh;
+      height: calc(100vh - 130px);
+    }
 
     @include onLargeDesktop {
       height: 85vh;
-    }
-
-      border: 1px solid $backgroundColor;
     }
 
     &--1 {
@@ -171,27 +179,10 @@
 
     @include onTablette {
       margin: 0 0 32px;
-      padding-left: 48px;
     }
 
     @include onDesktop {
       margin: 0 0 48px;
-    }
-  }
-
-  &__slider-btn-container {
-    z-index: 2;
-
-    @include onTablette {
-      padding-left: 48px;
-    }
-  }
-
-  &__slider-title {
-    z-index: 2;
-
-    @include onTablette {
-      padding-left: 48px;
     }
   }
 
