--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -4,14 +4,12 @@
   font-weight: 600;
   line-height: 21px;
   scroll-behavior: smooth;
+  overflow: scroll;
 
   &__body {
     min-width: 320px;
+    
     margin: 0 auto;
-
-    @include onLargeDesktop {
-      max-width: 1600px;
-    }
 
     background: $c-gray;
 
